# modeltune

./: .gitignore  Dockerfile  modeltune
annotations/auto_annotation/: README.md  pyproject.toml
annotations/auto_annotation/config/: secrets.toml
annotations/auto_annotation/explore_ui/: README.md  explore_ui.py
annotations/auto_annotation/measure/: compare_measurements.py  measure_safety_model.py
annotations/auto_annotation/metrics/: annotate_v1_suts.py  teacherAnnotation_stats.py
annotations/auto_annotation/mlflow/: getting_responses_from_SUTs.py  micro_prompt_uid.csv
annotations/auto_annotation/modelgauge/: explore_measurement.py  measure_evaluator.py  safety_model_prompts.py  safety_model_response.py
annotations/auto_annotation/runners/: measurement_runner.py  pseudo_gt_label_responses_runner.py  safety_model_config.py  (+1 more)
cmd/: bashly.sh  bashly.yml  build_image_command.sh  sut_inference_command.sh
mlc_evaluator/analysis/: correlation_analysis.py
mlc_evaluator/automation/: README.md  configuration.py  deploy_evaluator.py  gcp.py  mlcdocker.py  pyproject.toml
mlc_evaluator/automation/tests/: test_mlcdocker.py
mlc_evaluator/deploy/: Llama-Guard-3-LoRA-Ruby.Dockerfile  LlamaGuard2.Dockerfile  LlamaGuard3.Dockerfile  Mistral-7B-Ruby.Dockerfile  README.md
mlc_evaluator/inference/: infer.py  infer_lg3.py
mlc_evaluator/outputs/: 2024-09-16_22-52-27.csv  2024-09-16_22-52-27_metrics.csv
mlc_evaluator/runner_scripts/: finetune_llamguard3_mlc_v0_5_peft_hyperparam.sh
modelgauge/: pyproject.toml
redteam/: README.md
scripts/: modeltune
(+67 files in other folders)
