[tool.poetry]
name = "automation"
version = "0.1.0"
description = "Automate evaluator deployments and runs"
authors = ["MLCommons <admin@mlcommons.org>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
google-cloud-compute = "^1.19.2"
google-cloud = "^0.34.0"
fabric = "^3.2.2"
google-api-core = "^2.19.1"
paramiko = "^3.4.1"
black = "^24.8.0"
pytest = "^8.3.2"
openai = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
